--- a/templates/500.html
+++ b/templates/500.html
@@ -17,7 +17,7 @@
                             <li><a href="{% url "home" %}"  >主页</a><span>/</span></li>
                             <li><a href="{% url "about" %}" >关于我们</a><span>/</span></li>
                             <li><a href="">互助广场</a><span>/</span></li>
-                            <li><a href="blog.html" >公约</a><span>/</span></li>
+                            <li><a href="{% url "single" %}" >公约</a><span>/</span></li>
                             <li ><a href="{% url "login" %}" >登录</a></li>
                         </ul>
 
