部署配置更新

--- a/templates/backend/home_backend.html
+++ b/templates/backend/home_backend.html
@@ -63,7 +63,7 @@
         <tbody>
         <tr>
             <td>头像</td>
-            <td><img src="/static/{{ user.u_head_picture }}" height="50px" width="50px"></td>
+            <td><img src="/media/{{ user.u_head_picture }}" height="50px" width="50px"></td>
         </tr>
         <tr>
             <td>账号</td>
